	multiple initialization/shutdown of the library.

	Configuration methods of xml/xslt::init classes are now static.

	The previously separate manual was merged with Doxygen documentation so
	that all documentation is available in single place. As a consequence,
	PDF version of the manual is no longer provided, use HTML documentation
	included with xmlwrapp source distribution.

Version 0.5.1

	Various compilation fixes.

Version 0.5.0

	Fixed a null pointer dereference problem in
	xml::attributes, Bug ID 20. Thanks goes to John K. Hohm
	for finding this and providing a working patch.

	Added three new constructors to the xml::node class for creating
	CDATA sections, XML comments, and XML processing instructions. This
	is done using three new helper structs, xml::node::cdata,
	xml::node::comment, and xml::node::pi.

	Added new member functions to the xml::node class.
	They are: size and empty.

	Added new member functions to the xml::document class.
	They are: size, push_back, insert, replace, and erase.

	Added the ability to compress XML files saved with the
	xml::document::save_to_file member function (Bug ID 19).

	Major clean ups in the test harness. Test code should be a lot easier
	to write now.

Version 0.4.4

	Small changes so that xmlwrapp can work with libxml2
	version 2.6.0. Thanks goes to Craig Wiesen and Jonathan
	Wakely for finding this. (Bug ID 18).

	Fixed a typo in the manual. Thanks goes to Bill
	Luoma. (Bug ID 16).

Version 0.4.3

	Fixed a build problem on Linux (bug 10). This happens when
	libxslt was installed in /usr. configure.pl could not find
	libxslt because xslt-config does not list /usr/include.

	Updated the TODO list.

Version 0.4.2

	Version 0.4.2 is a maintenance release. A few small bugs were
	fixed and a work around for a bug in Perl 5.8 was added.

	Updated Perl scripts to work around a bug in the Perl 5.8
	regex parser. Thanks goes to Andy Chou.

	Added an encoding patch from Dmitriy Nikitinskiy.

Version 0.4.1
